k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: estock-backend-ingress
  namespace: estock-dev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - estock-api.31.97.145.251.nip.io
      secretName: estock-api-tls
  rules:
    - host: estock-api.31.97.145.251.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: estock-backend
                port:
                  number: 8080
